dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=usfrancd.1
endif

if ENABLE_QT
  dist_man1_MANS+=usfranc-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=usfranc-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=usfranc-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=usfranc-wallet.1
endif
endif
